- fixed the text not centered

--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,7 @@ input:checked + .slider:before {
 
 .welcome-message {
     max-width: 70%;
-    /* margin: 1rem auto; */
+    margin: 1rem auto;
     align-self: center;
     font-size: 1.2rem;
     color: #fff;
